prd_package/objects/LOPA_Hard_Code__mdt.object
<CustomObject>
    <fields>
        <fullName>Cabin_Type__c</fullName>
        <label>Cabin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main Deck</fullName>
                    <default>true</default>
                    <label>Main Deck</label>
                </value>
                <value>
                    <fullName>Upper Deck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabin_Version__c</fullName>
        <label>Cabin Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabin_Zone__c</fullName>
        <label>Cabin Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Type__c</fullName>
        <label>Position Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GF</fullName>
                    <default>true</default>
                    <label>GF</label>
                </value>
                <value>
                    <fullName>GN</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LAF</fullName>
                </value>
                <value>
                    <fullName>LAR</fullName>
                </value>
                <value>
                    <fullName>seat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>colL__c</fullName>
        <label>Column Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>col__c</fullName>
        <label>Column Index</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lopaId__c</fullName>
        <label>LopaId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxCol__c</fullName>
        <description>The maximum possible column in that zone</description>
        <label>Max Column</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>posId__c</fullName>
        <description>The unique identifier of this position</description>
        <label>PositionId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos__c</fullName>
        <description>The Label of that Position</description>
        <label>Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rowL__c</fullName>
        <description>Row Label according to their actual rows such as 43, 55, 60</description>
        <label>Row Label</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>row__c</fullName>
        <description>The index of row programmatically</description>
        <label>Row Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LOPA Add-On</label>
    <pluralLabel>LOPA Add-On</pluralLabel>
</CustomObject>